--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ main .belleville{
 	justify-content: center;
 	grid-gap: 10px;
 	text-align: center;
-	background-color: #f3f3f3;
+	background-color: lightgray;
 	padding: 5px;
 }
 
@@ -45,6 +45,7 @@ main .explore{
 
 .explore h2{
 	font-size: 50px;
+	margin-top: -35px;
 }
 
 .explore p{
@@ -53,6 +54,7 @@ main .explore{
 
 .explore button{
 	font-size: 20px;
+	color: white;
 	border: none;
 	border-radius: 34px;
 	padding: 20px;
@@ -66,4 +68,74 @@ main .explore{
 	transform: scale(1.2);
 	opacity: 0.9;
 }
+
+.explore{
+	background-color: #f3f3f3;
+	padding-bottom: 65px;
+}
+
+
+		/*partie fonctionnement*/
+
+
+.info ol{
+	display: flex;
+	grid-gap: 50px;
+	flex-wrap: wrap;
+	list-style: none;
+}
+
+.info li{
+	position: relative;
+	background-color: #f6f6f6;
+	padding: 35px;
+	border: none;
+	border-radius: 35px;
+	flex-grow: 1;
+	box-shadow: 10px 10px 10px #f2f2f2;
+}
+
+.info h2{
+	padding-left: 25px;
+}
+
+.info{
+	margin-top: 5rem;
+}
+
+.info li:hover{
+	transform: scale(1.1);
+	opacity: 0.9;
+}
+
+.fa-mobile-android-alt:before, .fa-mobile-screen:before{
+	color: gray;
+	font-size: 20px;
+	padding-right: 20px;
+}
+
+.fa-list-dots:before, .fa-list-ul:before{
+	color: gray;
+	padding-right: 20px;
+}
+
+.fa-store:before{
+	color: #9356DC;
+	padding-right: 20px;
+}
+
+.info span{
+	border: 1px solid red;
+	width: 30px;
+	height: 30px;
+	border-radius: 25px;
+	color: white;
+	background-color: #9356DC;
+	display: grid;
+	place-items: center;
+	position: absolute;
+	bottom: 31px;
+	left: -15px;
+}
+
 
