--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ main .explore{
 
 
 .restau img{
-	height: 22rem;
+	height: 18rem;
 	width: 100%;
 	object-fit: cover;
 	border-radius: 22px 22px 0 0px;
@@ -153,7 +153,7 @@ main .explore{
 	flex-wrap: wrap;
 	background-color: #f6f6f6;
 	margin: 80px 0 80px;
-	height: 65rem;
+	height: 60rem;
 }
 
 .cart{
@@ -192,7 +192,7 @@ main .explore{
 .cart .fa-solid{
 	position: absolute;
 	right: 40px;
-	top: 22.8rem;
+	top: 18.8rem;
 	font-size: 30px;	
 	color: transparent;		
 	-webkit-background-clip: text;
@@ -201,7 +201,7 @@ main .explore{
 .cart .fa-regular{
 	position: absolute;
 	right: 40px;
-	top: 22.8rem;
+	top: 18.8rem;
 	font-size: 30px;
 }
 
@@ -224,6 +224,10 @@ footer{
 footer h2{
 	font-family: shrikhand;
 	margin: 0;
+}
+
+footer .fa-solid{
+	padding-right: 10px;
 }
 
 
