--- a/css/menu_La-palette-du-goût.css
+++ b/css/menu_La-palette-du-goût.css
@@ -61,13 +61,14 @@ header .fa-solid{
 .menu h2{
 	padding-left: 2em;
 	font-family: shrikhand;
+	padding-top: 2em;
 }
 
 .menu .fa-solid{
 	position: absolute;
 	right: 60px;
 	font-size: 30px;
-	top: 20px;	
+	top: 45px;	
 	color: transparent;		
 	-webkit-background-clip: text;
 }
@@ -77,7 +78,7 @@ header .fa-solid{
 	position: absolute;
 	right: 60px;
 	font-size: 30px;
-	top: 20px;
+	top: 45px;
 }
 
 .menu .fa-solid:hover{
@@ -89,22 +90,26 @@ header .fa-solid{
 .menu section{
 	position: relative;
 	display: flex;
-	align-items: center;
-	justify-content: space-around;
 	flex-wrap: wrap;
+	flex-direction: column;
+	width: 95%;
+	grid-gap: 1em;
+	margin: 0 2em 0em 1em;
 }
 
 .menu h3{
 	flex-basis: 100%;
-	margin-left: 2em;
+	margin:2em 0 0;
 }	
 
 .menu article{
-	border: 1px solid blue;
+	background-color: white;
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
-	flex-basis: 30%;
+	flex-basis: 27%;
+	margin-right: 3em;
+	border-radius: 25px 0 0 25px;
 }
 
 article h4  {
@@ -117,15 +122,29 @@ article p{
 
 .check{
 	position: relative;
-	border: 1px solid yellow;
-	padding: 3em;
+	padding: 3em 1.5em;
+	border-radius: 0 25px 25px 0;
+	margin-right: -48px;
+	background-color: white;
 }
 
 .choix-du-menu .fa-solid{
 	position: absolute;
 	top: 30px;
-	right: 30px;
-	color: green;
+	right: 44px;
+	color: white;
+	transition-duration: 0.5s;
+	transition-property: transform;
+}
+
+.choix-du-menu .check:hover{
+	background-color: #99E2D0;
+	margin-right: -56px;
+	padding-left: 90px;
+}
+
+.check .fa-solid:hover{
+	transform: rotate(360deg);
 }
 
 
@@ -134,3 +153,15 @@ article p{
 	margin: 45px 0 0 auto;
 }
 
+.menu button{
+	flex-basis: 14%;
+	padding: 2em 7em;
+	margin-top: 5em;
+	border-radius: 36px;
+	border: none;
+	background-image: linear-gradient(to top,rgba(147, 86, 220, 0.9),rgba(255, 121, 218, 0.9));
+}
+
+.menu button:hover{
+	transform: scale(1.1);
+}
