Fin de réalisation du menu la palette du goût. Ajout de 2 nouveaux fichier, le fichier menu_La-noted-encheté.html et du fichier menu_La-noted-enchanté.css. fin de réalisation du menu la nonte enchanté.

--- a/css/menu_La-noted-enchanté.css
+++ b/css/menu_La-noted-enchanté.css
@@ -218,6 +218,12 @@ article:hover p{
 	animation: apparition 0.8s 1.8s ease-out forwards;
 }
 
+.menu .animation-10{
+	opacity: 0;
+	transform: translateY(-30px);
+	animation: apparition 0.8s 1s ease-out forwards;
+}
+
 .menu-prix{
 	margin: 45px 10px 0 auto;
 }
