--- a/css/menu-desktop.css
+++ b/css/menu-desktop.css
@@ -1,3 +1,14 @@
+/**
+ * menu_à-la-française-desktop.css
+ * 
+ * fichier contenant les propriétés css spécifiques au menu_à-la-française-desktop (menu_à-la-française-desktop first)
+ * 
+ * @author: njah kevin;
+ * @version: 1.0;
+ * @date: 2022-10;
+ */
+
+
 .menu article{
 	width: 32%;
 }
