--- a/css/menu_La-palette-du-goût-desktop.css
+++ b/css/menu_La-palette-du-goût-desktop.css
@@ -1,3 +1,14 @@
+/**
+ * menu_La-palette-du-goût-desktop.css
+ * 
+ * fichier contenant les propriétés css spécifiques au menu_La-palette-du-goût-desktop (menu_La-palette-du-goût-desktop first)
+ * 
+ * @author: njah kevin;
+ * @version: 1.0;
+ * @date: 2022-10;
+ */
+
+
 .menu article{
 	width: 32%;
 }
