--- a/css/menu_le-delice-des-sens-desktop.css
+++ b/css/menu_le-delice-des-sens-desktop.css
@@ -1,3 +1,14 @@
+/**
+ * menu_le-delice-des-sens-desktop.css
+ * 
+ * fichier contenant les propriétés css spécifiques au menu_le-delice-des-sens-desktop (menu_le-delice-des-sens first)
+ * 
+ * @author: njah kevin;
+ * @version: 1.0;
+ * @date: 2022-10;
+ */
+
+
 .menu article{
 	width: 32%;
 }
