--- a/css/mobile-first.css
+++ b/css/mobile-first.css
@@ -1,3 +1,14 @@
+/**
+ * fichier mobil-first.css
+ * 
+ * fichier contenant les propriétés css générales et spécifiques au mobil-firs (desktop first)
+ * 
+ * @author: njah kevin;
+ * @version: 1.0;
+ * @date: 2022-10;
+ */
+
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital@0;1&family=Roboto:ital,wght@0,400;0,500;1,400;1,500&family=Shrikhand&display=swap');
 
 
@@ -64,6 +75,7 @@ main .explore{
 	margin-top: 20px;
 	box-shadow: 4px 4px 5px #f3f3;
 	transition: transform;
+	cursor: pointer;
 	background-image: linear-gradient(to top,rgba(147, 86, 220, 0.9),rgba(255, 121, 218, 0.9));
 }
 
@@ -100,6 +112,7 @@ main .explore{
 	box-shadow: 10px 10px 10px #f2f2f2;
 	width: 95%;
 	margin-right: 2em;
+	cursor: pointer;
 }
 
 .info h2{
