--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,3 +1,14 @@
+/**
+ * fichier tablet.css
+ * 
+ * fichier contenant les propriétés css spécifiques au tablet (mobil-first)
+ * 
+ * @author: njah kevin;
+ * @version: 1.0;
+ * @date: 2022-10;
+ */
+
+
 .cart{
 	flex-basis: 45%;
 }
