--- a/css/menu-mobile.css
+++ b/css/menu-mobile.css
@@ -1,7 +1,7 @@
 /**
- * fichier menu_La-note-enchanté.css
+ * fichier menu-mobile.css
  * 
- * fichier contenant les propriétés css générales et spécifiques au menu_La-note-enchanté (menu_La-note-enchanté first)
+ * fichier contenant les propriétés css générales et spécifiques au menu-mobile (menu-mobile first)
  * 
  * @author: njah kevin;
  * @version: 1.0;
@@ -81,12 +81,14 @@ header .fa-solid{
 	font-size: 30px;
 	top: 45px;	
 	color: transparent;
-	opacity: 0;		
+	opacity: 0;	
+	transition: opacity 1s;	
 	-webkit-background-clip: text;
+	background-image: linear-gradient(to top,rgba(255, 121, 218, 1),rgba(147, 86, 220, 1));
 }
 
 
-.menu .fa-regular{
+.menu .fa-heart{
 	position: absolute;
 	right: 60px;
 	font-size: 30px;
@@ -130,13 +132,26 @@ article p{
 	padding-left: 1em;
 }
 
+article:hover p{
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+	width: 250px;
+}
 .check{
 	position: relative;
 	width: 6em;
-	height: 6em;
+	height: 6.1em;
 	border-radius: 0 25px 25px 0;
 	background-color: #99E2D0;
 	margin-right: -6em;
+	transition-duration: 1s;
+}
+
+article:hover .check{
+	margin-right: 0;
+	padding-left: 90px;
+	transition-duration: 1s;
 }
 
 .check .fa-solid{
@@ -144,14 +159,6 @@ article p{
 	top: 35px;
 	right: 35px;
 	color: white;
-
-}
-
-article:hover .check{
-	margin-right: 0;
-	padding-left: 90px;
-	transition-duration: 1s;
-	transition-property: margin-right;
 }
 
 article:hover .fa-solid{
@@ -159,13 +166,6 @@ article:hover .fa-solid{
 	transition-duration: 1s;
 	transition-property: transform;
 	opacity: 1;
-}
-
-article:hover p{
-	text-overflow: ellipsis;
-	white-space: nowrap;
-	overflow: hidden;
-	width: 250px;
 }
 
 .menu .animation-1{
@@ -228,6 +228,17 @@ article:hover p{
 	animation: apparition 0.8s 2s ease-out forwards;
 }
 
+@keyframes apparition {
+  0% {
+   	transform: translateY(10px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+	}
+}
+
 .menu-prix{
 	margin: 45px 10px 0 auto;
 }
@@ -240,12 +251,15 @@ article:hover p{
 	border: none;
 	color: white;
 	font-size: 20px;
+	transition: transform 200s;
 	cursor: pointer;
 	background-image: linear-gradient(to top,rgba(147, 86, 220, 0.9),rgba(255, 121, 218, 0.9));
 }
 
 .menu button:hover{
-	transform: scale(1.1);
+	transform: scale(1.2);
+	opacity: 0.8;
+	box-shadow: 4px 4px 6px 10px #f3f3;
 }
 
 
@@ -270,15 +284,3 @@ footer .fa-solid{
 footer a{
 	color: white;
 }
-
-@keyframes apparition {
-  0% {
-    -webkit-transform: translateY(10px);
-            transform: translateY(10px);
-    opacity: 0;
-  }
-  100% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-    opacity: 1;
-  }
